# ZeroNetAI

./: .gitignore  README.md  bitnet-api-server.py  sap_phases.yaml  tailwind.config.js
api-server/: Cargo.toml
api-server/src/: main.rs
bitnet-host/: Cargo.toml
bitnet-host/src/: main.rs
bitnet-zkml/: Cargo.toml
bitnet-zkml/src/: main.rs
sap-protocol/: .eslintignore  .gitignore  README.md  eslint.config.js  hardhat.config.cjs  package.json  tsconfig.json
sap-protocol/agent/: index.ts  loader.ts  test.ts
sap-protocol/agent/model/: README.md
sap-protocol/contracts/: AgentRegistry.sol  RewardToken.sol  TaskBoard.sol
sap-protocol/contracts/interfaces/: IWorldID.sol
sap-protocol/deployments/: localhost-1751741373.json  localhost-1751745512.json  localhost-1751749696.json  localhost-1751752747.json  localhost-latest.json
sap-protocol/docs/: token-acquisition-guide.json
sap-protocol/frontend/: LLM-INTEGRATION.md  LLM_CHATBOT_SUMMARY.md  LOCAL_LLM_SETUP.md  README.md  README_CHATBOT.md  WORKFLOW_DESIGNER_SPECS.md  eslint.config.js  package.json  pnpm-workspace.yaml  vite.config.ts
sap-protocol/frontend/src/: App.tsx  index.css
sap-protocol/frontend/src/components/: AgentProfile.tsx  AgentRegistration.tsx  ChatBot.tsx  Dashboard.tsx  LLMChatbot.tsx  TaskBoard.tsx  WorkflowDesigner.tsx  WorldIDDemo.tsx
sap-protocol/frontend/src/config/: contracts.ts  wagmi.ts  zkvm.ts
sap-protocol/frontend/src/data/: demoWorkflowData.ts
sap-protocol/frontend/src/hooks/: useLLM.ts
sap-protocol/frontend/src/services/: llmApi.ts  storageService.ts
sap-protocol/frontend/src/store/: workflowStore.ts
sap-protocol/frontend/src/styles/: design-system.ts
sap-protocol/scripts/: deploy-simple.cjs  deploy.ts  get-mumbai-tokens.sh
sap-protocol/workflow/: package.json  tsconfig.json
sap-protocol/workflow/src/: index.ts
sap-protocol/workflow/src/engine/: WorkflowEngine.ts  WorkflowManager.ts
sap-protocol/workflow/src/nodes/: AgentTaskNode.ts  BaseNode.ts  ChainSubmitNode.ts  TriggerNode.ts  index.ts
sap-protocol/workflow/src/types/: schemas.ts  (+1 more)
sap-protocol/workflow/tests/: workflow.test.ts
(+11 files in other folders)
