[package]
name = "bitnet-host"
version = "0.1.0"
edition = "2021"

[dependencies]
bitnet-methods = { path = "../methods" }
risc0-zkvm = { version = "2.1", features = ["prove", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
base64 = "0.22"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
# TODO: Add GGUF parser when available on crates.io
# gguf-rs = "0.1"