[package]
name = "bitnet-zkml"
version = "0.1.0"
edition = "2021"

[dependencies]
# API server dependencies
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
clap = { version = "4.0", features = ["derive"] }

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"

# System integration for Docker - using tokio::process::Command (built-in) 